--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-02-22 Jan Bartels
+	* Change: TYPO3 6.2 compatibility
+
 2013-05-30 Robert Heel <typo3@bobosch.de>
 	* Bugfix: Conflict when creating multiple pdf's at once (Thanks to Jan Bartels).
 	* Change: Add page type to TS constants (Thanks to Jan Bartels).
