--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-07-22 Robert Heel <typo3@bobosch.de>
+	* Add: Static TS for standard installations.
+
 2015-02-22 Jan Bartels
 	* Change: TYPO3 6.2 compatibility
 
