--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-07-06 Robert Heel <typo3@bobosch.de>
+	* Bugfix: Cleanup static TS.
+
 2016-06-30 Robert Heel <typo3@bobosch.de>
 	* Change: Use stdin and stout of wkhtmltopdf.
 	* Add: Debug option.
