--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-07-10 Robert Heel <typo3@bobosch.de>
+	* Change: REST documentation.
+
 2016-07-06 Robert Heel <typo3@bobosch.de>
 	* Bugfix: Cleanup static TS.
 
