--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* Issue #1: Static calls for non-static methods (Thanks to Julien VITTE).
 	* Add: composer.json.
 	* Add: Write wkhtmltopdf output to debug log.
+	* Add: Link to github page.
 
 2016-07-12 Robert Heel <typo3@bobosch.de>
 	* Change: TYPO3 7.6 compatibility.
